# apps_zephyr

./: .gitignore  LICENSE  LICENSE-BSD-3  License.txt  README.md  SW-Content-Register.txt  dm-facialdetect-zephyr-demo.xml  dm-smartwatch-zephyr-demo.xml  west.yml
apps/FacialDetect/: CMakeLists.txt  Kconfig  prj.conf
apps/FacialDetect/boards/: frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay  mimxrt1060_evkb.conf  mimxrt1060_evkb.overlay
apps/FacialDetect/img/: image_utils.h
apps/FacialDetect/src/: FacialDetect.h  convert.c  convert.h  display.c  display_app.h  face_det.cpp  main.c
apps/FacialDetect/src/font/: ASCII_consolas_3618.h
apps/FacialDetect/src/model/: anchors.txt  get_top_n.cpp  model.cpp  model.h  yolo_post_processing.cpp
apps/FacialDetect/src/model/model_npu/: face_detect_converted.tflite  model_data.h  model_data.s  model_ops_npu.cpp
apps/FacialDetect/src/model/model_sw/: model_data.h  model_mobilenet_ops_micro.cpp
apps/SmartWatch/: CMakeLists.txt  Kconfig  prj.conf  reduce_ram.conf  reduce_ram.overlay  smartwatch_ram.conf  smartwatch_ram.overlay
apps/SmartWatch/boards/: mimxrt595_evk_cm33.overlay
apps/SmartWatch/src/: lvgl_thread.c  main.c
apps/SmartWatch/src/PVT/: PVT_Sensor.c  PVT_Sensor.h
apps/SmartWatch/src/UI_SW/: animation.c  animation.h  events_init.c  gui_guider.c  gui_guider.h  screen_setup.c  screen_setup.h  ui_EKG.c  ui_EKG.h  ui_Music.c  ui_Music.h  ui_SportAPI.c  ui_SportAPI.h  ui_Watch_Face.c  ui_Watch_Face.h  ui_Weather.c  ui_Weather.h  ui_commun.c  ui_commun.h  ui_helpers.c  ui_helpers.h
apps/SmartWatch/vglite-port/: CMakeLists.txt  Kconfig
apps/SmartWatch/vglite-port/VGLite/rtos/: vg_lite_os.c  vg_lite_os.h
apps/SmartWatch/vglite-port/VGLiteKernel/rtos/: vg_lite_hal.c  vg_lite_platform.h
